# manatee-civic-ai

./: .gitignore  README.md  RUNBOOK.md  api_server.py  pyproject.toml
agents/: __init__.py  base_agent.py  citizen_service_agent.py  civic_ai_policy_agent.py  document_analysis_agent.py  web_intelligence_agent.py
docs/: portfolio_snapshot.json
governance/: __init__.py  audit_logger.py  circuit_breaker.py  model_registry.py  pii_redaction.py  safety_gates.py
inference/: __init__.py  embeddings_gateway.py  local_llm_gateway.py  model_config.py
knowledge_base/: COUNTY_AI_POLICY_RESEARCH.md  GOVERNMENT_AI_DOCUMENTS_KB.md
tests/: test_api_server.py  test_circuit_breaker.py  test_dify_integration.py  test_embeddings.py  test_governance.py
tools/: before_after_comparator.py  golden_record_analyzer.py
