[project]
name = "manatee-civic-ai"
version = "0.1.0"
description = "Civic AI platform for Manatee County — agents, governance, and local LLM inference"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
