[project]
name = "manatee-civic-ai"
version = "0.1.0"
description = "Civic AI platform for Manatee County — agents, governance, and local LLM inference"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.9",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "numpy>=1.26",
    "pandas>=2.2",
    "nltk>=3.8",
    "PyPDF2>=3.0",
]

[tool.setuptools.packages.find]
include = ["agents*", "governance*", "inference*", "tools*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring running civic-ai proxy and Ollama",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
